--- a/clase3/package.json
+++ b/clase3/package.json
@@ -14,5 +14,8 @@
     "express"
   ],
   "author": "BioDani",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.2"
+  }
 }
