--- a/Project1_steadyReadyGo/package.json
+++ b/Project1_steadyReadyGo/package.json
@@ -4,12 +4,24 @@
   "description": "Project from 1st module of course \"From Hero to SuperHero\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "lint": "eslint"
   },
   "keywords": [
     "Express",
     "nodejs"
   ],
   "author": "BioDani",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.7"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
